add my all code mama

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 <p style="font-size: 2rem;">
     I am the master of HTML, CSS and Javascript.
      I know everything needed to make a website function, efficient. 
-     I didn't stop with the web. I went beyond with most popular Javascript 
-      framework called Vue JS. I even know the deployment, server and security. 
+     I didn't stop with the web. I went beyond with most popular langueage 
+      called Node JS. I even know the deployment, server and security. 
        I will give you 100% web solution.
 </p>
 
@@ -87,7 +87,7 @@
         <p style="font-size: 2rem;">
             They didn't offer me a job. But I made myself 
          as a remove web developer. I made their website and showed it to them. 
-          They liked it. And uploaded the content. It was fun working at Programming Hero
+          They liked it. And uploaded the content. It was fun working by Subrota Chandra
         </p>
     </div>
 </div>
