--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <div class="HeaderDiv">
     <div class="leftHeader">
 <head>
-    <h2 style="font-size:5rem;"> Welcome to the <span style="color: lime ;"> Subrota Chandra Sareker world</span></h2>
+    <h2 style="font-size:5rem;"> Welcome to the <br> <span style="color: lime ;"> Subrota Chandra Sarker <br>
+         <span style="color:rgb(0, 60, 255) ;">world . </span></span></h2>
 </head>
 <p style="font-size: 3rem;">Build Climber and Train Stopper</p>
 
@@ -31,6 +32,7 @@
      I will not stop until I become the Web Development Hero.
 </p>
 <a href="https://www.linkedin.com/in/subrota-chandra-sarker-0ab661224/" target="_blank">
+    <br>
     <button class="button">  Hire me </button>
 </a>
     </div>
@@ -56,10 +58,11 @@
               teach my grandma how to make simple website. 
              My goal is to build 3 websites and learn advanced topics.  
         </p>
+        <br>
   <a href="images/resume.pdf" target="_blank">       <button class="button" >  Download Resume </button> </a>
     </div>
 </div>
-<br><br>
+<br><br><br><br><br><br>
 <h2 style="font-size: 6rem ; margin-top: 4rem;">Experiences</h2>
 <div class="ExperienceDiv">
     <div class="experienceLeft">
