--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
      I will not stop until I become the Web Development Hero.
 </p>
 <a href="https://www.linkedin.com/in/subrota-chandra-sarker-0ab661224/" target="_blank">
-    <br>
-    <button class="button">  Hire me </button>
+ <button class="button">  Hire me </button>
 </a>
+<br>
     </div>
     <div class="rightHeader">
 <img src="images/proback.jpg" alt="profile image" class="headImage"/>
@@ -59,7 +59,7 @@
              My goal is to build 3 websites and learn advanced topics.  
         </p>
         <br>
-  <a href="images/resume.pdf" target="_blank">       <button class="button" >  Download Resume </button> </a>
+  <a href="images/resume.pdf" style="text-decoration: none; color: white;"  download>  <button class="button" >  Download Resume </button></a>
     </div>
 </div>
 <br><br><br><br><br><br>
