--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
     <!--css link-->
-    <link rel="stylesheet" href="style.css"/>
+ <link rel="stylesheet" href="style.css"/>
     <!--google font family -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Finlandica:ital,wght@1,600&family=Gentium+Book+Plus&family=Open+Sans:wght@300&family=Poppins:wght@300&family=Raleway:wght@200&family=Roboto&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
-
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Protfolio </title>
-    <link rel="shortcut icon" href="images/my-bg.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="images/hand.jpg" type="image/x-icon">
 </head>
 <body>
     <section>
